--- a/app/src/main/res/layout/fragment_vario.xml
+++ b/app/src/main/res/layout/fragment_vario.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.RootActivity">
 
+
+
+
+
     <com.formgrav.aerotools.ui.customview.VarioView2
         android:id="@+id/arrowView"
         android:layout_width="340dp"
@@ -16,15 +20,63 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/screw1"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="6dp"
 
+        android:layout_marginBottom="6dp"
+        android:background="@drawable/button_selector3"
+        android:src="@drawable/screw_2"
+        app:layout_constraintBottom_toBottomOf="@+id/arrowView"
+        app:layout_constraintStart_toStartOf="@+id/arrowView" />
+
+    <ImageView
+        android:id="@+id/screw5"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="6dp"
+
+        android:layout_marginTop="6dp"
+        android:background="@drawable/button_selector3"
+        android:src="@drawable/screw_2"
+        app:layout_constraintStart_toStartOf="@+id/arrowView"
+        app:layout_constraintTop_toTopOf="@+id/arrowView" />
+
+    <ImageView
+        android:id="@+id/screw6"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="6dp"
+        android:background="@drawable/button_selector3"
+        android:src="@drawable/screw_2"
+        app:layout_constraintEnd_toEndOf="@+id/arrowView"
+        app:layout_constraintTop_toTopOf="@+id/arrowView" />
+
+    <ImageView
+        android:id="@+id/screw7"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="6dp"
+        android:background="@drawable/button_selector3"
+        android:src="@drawable/screw_2"
+        app:layout_constraintBottom_toBottomOf="@+id/arrowView"
+        app:layout_constraintEnd_toEndOf="@+id/arrowView" />
 
     <TextView
         android:id="@+id/current_pressure"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="144dp"
         android:text="CP-1014.3"
-        style="@style/Text"
-        android:textSize="18dp"
+        android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="@+id/arrowView"
         app:layout_constraintTop_toTopOf="@+id/arrowView" />
 
@@ -66,12 +118,12 @@
 
     <TextView
         android:id="@+id/alt"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:text="meters"
         android:textSize="16dp"
-        style="@style/Text"
         app:layout_constraintEnd_toEndOf="@+id/altitude"
         app:layout_constraintStart_toStartOf="@+id/altitude"
         app:layout_constraintTop_toBottomOf="@+id/altitude" />
@@ -79,17 +131,18 @@
 
     <EditText
         android:id="@+id/edit_pressure_view"
+        style="@style/Text"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="212dp"
         android:background="@drawable/edittext_border"
         android:gravity="center"
         android:hint="input"
-        style="@style/Text"
         android:inputType="numberDecimal"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/set_button"
-        app:layout_constraintTop_toBottomOf="@+id/alt" />
+        app:layout_constraintStart_toStartOf="@+id/arrowView"
+        app:layout_constraintTop_toTopOf="@+id/arrowView" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -131,14 +184,14 @@
 
     <TextView
         android:id="@+id/textView"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="m/s"
-        style="@style/Text"
+        app:layout_constraintBottom_toTopOf="@+id/vertical_speed_view"
         app:layout_constraintEnd_toEndOf="@+id/vertical_speed_view"
         app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="@+id/vertical_speed_view"
-        app:layout_constraintTop_toBottomOf="@+id/vertical_speed_view" />
+        app:layout_constraintStart_toStartOf="@+id/vertical_speed_view" />
 
     <TextView
         android:id="@+id/textView2"
@@ -167,12 +220,12 @@
         android:id="@+id/set_button"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="12dp"
         android:background="@drawable/button_selector2"
-        app:layout_constraintBottom_toTopOf="@+id/edit_pressure_view"
         app:layout_constraintEnd_toEndOf="@+id/arrowView"
-        app:layout_constraintStart_toStartOf="@+id/altitude" />
+        app:layout_constraintStart_toStartOf="@+id/altitude"
+        app:layout_constraintTop_toBottomOf="@+id/alt" />
 
     <TextView
         android:id="@+id/text_1"
