--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,7 +3,9 @@
     <style name="Base.Theme.Altimeter" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <item name="colorPrimary">#727275</item>
+
     </style>
+    <style name="Theme.Altimeter" parent="Base.Theme.Altimeter" />
 
     <style name="Text">
         <item name="android:textColor">@color/white</item>
