--- a/app/src/main/res/layout/fragment_down_root.xml
+++ b/app/src/main/res/layout/fragment_down_root.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.rootfragments.DownRootFragment">
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
+        android:id="@+id/down_viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
