--- a/app/src/main/res/layout/fragment_green_line.xml
+++ b/app/src/main/res/layout/fragment_green_line.xml
@@ -26,8 +26,11 @@
         android:id="@+id/resultTextView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="initial value"
+        android:background="@drawable/rectangle_green_right"
+        android:paddingEnd="8dp"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:text="beginning"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/numberPicker"
         app:layout_constraintEnd_toStartOf="@+id/numberPicker"
@@ -37,8 +40,11 @@
         android:id="@+id/resultTextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="line length"
+        android:paddingStart="8dp"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:background="@drawable/rectangle_green_left"
+        android:text="length"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/numberPicker2"
         app:layout_constraintStart_toEndOf="@+id/numberPicker2"
