--- a/app/src/main/res/drawable/background_general_fragment.xml
+++ b/app/src/main/res/drawable/background_general_fragment.xml
@@ -2,11 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Первый прямоугольник -->
-    <item>
+    <item  android:gravity="top">
         <shape>
             <size
                 android:width="90dp"
-                android:height="56dp" />
+                android:height="208dp" />
             <gradient
                 android:startColor="#2460F8"
                 android:endColor="#F4F6F8"
@@ -15,11 +15,12 @@
     </item>
 
     <!-- Второй прямоугольник -->
-    <item android:top="200dp">
+    <item android:gravity="bottom">
         <shape>
             <size
                 android:width="90dp"
-                android:height="56dp" />
+                android:height="208dp"
+                />
             <gradient
                 android:startColor="#FF6F00"
                 android:endColor="#FC99ADC6"
