--- a/app/src/main/res/layout/alt_level.xml
+++ b/app/src/main/res/layout/alt_level.xml
@@ -9,7 +9,7 @@
     <View
         android:id="@+id/horizontalDividerView"
         android:layout_width="14dp"
-        android:layout_height="2dp"
+        android:layout_height="4dp"
         android:background="@color/light_gray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/alt_value"
@@ -18,7 +18,7 @@
 
     <View
         android:id="@+id/horizontalDividerView2"
-        android:layout_width="5dp"
+        android:layout_width="8dp"
         android:layout_height="1dp"
         android:background="@color/light_gray"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
 
     <View
         android:id="@+id/horizontalDividerView3"
-        android:layout_width="5dp"
+        android:layout_width="8dp"
         android:layout_height="1dp"
         android:background="@color/light_gray"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,8 +36,9 @@
         android:id="@+id/alt_value"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="6dp"
         android:text="100"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/horizontalDividerView"
         app:layout_constraintTop_toTopOf="parent" />
