--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -4,65 +4,155 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@drawable/background_general_fragment"
-    tools:context=".ui.activity.RootActivity"
-    >
+    tools:context=".ui.activity.RootActivity">
 
-    <RelativeLayout
-        android:layout_width="71dp"
+    <ImageView
+        android:id="@+id/yourImageView"
+        android:layout_width="68dp"
         android:layout_height="800px"
-        android:layout_marginTop="60dp"
+        android:src="@drawable/recycler_view_border"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerView" />
+
+    <com.formgrav.aerotools.ui.customview.VarioView
+        android:id="@+id/varioView"
+        android:layout_width="26dp"
+        android:layout_height="400px"
+        android:background="@drawable/varoi_view_border"
+        android:src="@drawable/recycler_view_border"
+        app:layout_constraintStart_toEndOf="@+id/yourImageView"
+        app:layout_constraintTop_toTopOf="@+id/yourImageView" />
+
+    <com.formgrav.aerotools.ui.customview.VarioViewDown
+        android:id="@+id/varioViewDown"
+        android:layout_width="26dp"
+        android:layout_height="400px"
+
+        android:background="@drawable/varoi_view_border"
+        app:layout_constraintBottom_toBottomOf="@+id/yourImageView"
+        app:layout_constraintStart_toEndOf="@+id/yourImageView" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="68dp"
+        android:layout_height="800px"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="32dp"
+        android:background="@android:color/transparent"
+        android:nestedScrollingEnabled="false"
+        android:src="@drawable/recycler_view_border"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Ваша форма с фоном -->
-        <ImageView
-            android:id="@+id/yourImageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/recicler_view_border" />
+    <TextView
+        android:id="@+id/alt_text_view"
+        android:layout_width="240px"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:background="@drawable/left_arrow"
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-
-            android:background="@android:color/transparent"
-            android:nestedScrollingEnabled="false"
-            tools:layout_editor_absoluteX="183dp"
-            tools:layout_editor_absoluteY="114dp" />
-
-        <TextView
-            android:id="@+id/alt_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/red"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="140dp"
-            android:background="@drawable/textview_border2"
-            android:text="100" />
-
-    </RelativeLayout>
+        android:gravity="center_vertical|center"
+        android:paddingStart="4dp"
+        android:paddingEnd="8dp"
+        android:text="100"
+        android:textColor="@color/red"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
+        app:layout_constraintStart_toStartOf="@+id/recyclerView"
+        app:layout_constraintTop_toTopOf="@+id/recyclerView" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="40dp"
         android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="14dp"
+        android:text="1"
+        app:layout_constraintEnd_toEndOf="@+id/varioView"
+        app:layout_constraintTop_toTopOf="@+id/varioView" />
+
+    <TextView
+        android:id="@+id/text_14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="112dp"
+        android:text="1"
+        app:layout_constraintBottom_toBottomOf="@+id/varioViewDown"
+        app:layout_constraintEnd_toEndOf="@+id/varioView" />
+
+    <TextView
+        android:id="@+id/text_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="14dp"
+        android:text="2"
+        app:layout_constraintEnd_toEndOf="@+id/varioView"
+        app:layout_constraintTop_toTopOf="@+id/varioView" />
+
+    <TextView
+        android:id="@+id/text_15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="82dp"
+        android:text="2"
+        app:layout_constraintBottom_toBottomOf="@+id/varioViewDown"
+        app:layout_constraintEnd_toEndOf="@+id/varioView" />
+
+    <TextView
+        android:id="@+id/text_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="14dp"
+        android:text="3"
+        app:layout_constraintEnd_toEndOf="@+id/varioView"
+        app:layout_constraintTop_toTopOf="@+id/varioView" />
+
+    <TextView
+        android:id="@+id/text_16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="52dp"
+        android:text="3"
+        app:layout_constraintBottom_toBottomOf="@+id/varioViewDown"
+        app:layout_constraintEnd_toEndOf="@+id/varioView" />
+
+    <TextView
+        android:id="@+id/text_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="14dp"
+        android:text="4"
+        app:layout_constraintEnd_toEndOf="@+id/varioView"
+        app:layout_constraintTop_toTopOf="@+id/varioView" />
+
+    <TextView
+        android:id="@+id/text_17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="22dp"
+        android:text="4"
+        app:layout_constraintBottom_toBottomOf="@+id/varioViewDown"
+        app:layout_constraintEnd_toEndOf="@+id/varioView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
